--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,12 @@
     background-color: #efb762;
     margin: 20px auto;
 }
+
+.two {
+    width: 475px;
+    height: 200px;
+    background-color: #8f0401;
+    /* center element */
+    margin: auto;
+
+}
