--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     height: 600px;
     background-color: #4d0f00;
     overflow: hidden;
+    filter: blur(2px);
   }
 
 .frame {
@@ -24,6 +25,18 @@
     height: 200px;
     background-color: #8f0401;
     /* center element */
-    margin: auto;
+    margin: 0 auto 20px;
+}
 
+.three {
+    width: 91%;
+    height: 28%;
+    background-color: #b20403;
+    /* center the element */
+    margin: auto;
+    filter: blur(2px);
+}
+
+.one, .two {
+  filter: blur(1px);
 }
