--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@
     height: 150px;
     background-color: #efb762;
     margin: 20px auto;
+    box-shadow: 0 0 3px 3px #efb762;
+    border-radius: 9px;
+    transform: rotate(-0.6deg);
 }
 
 .two {
@@ -26,6 +29,9 @@
     background-color: #8f0401;
     /* center element */
     margin: 0 auto 20px;
+    box-shadow: 0 0 3px 3px #8f0401;
+    border-radius: 8px 10px 8px 10px;
+    transform: rotate(0.4deg);
 }
 
 .three {
@@ -35,6 +41,9 @@
     /* center the element */
     margin: auto;
     filter: blur(2px);
+    box-shadow: 0 0 5px 5px #b20403;
+    border-radius: 30px 25px 60px 12px;
+    transform: rotate(-0.2deg);
 }
 
 .one, .two {
